Update dependencies, refactor, use different database